uuid-api/manifests/uuid-api-multi-resource-manifest.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uuid-api-deployment
  namespace: doridoridoriand
spec:
  replicas: 6
  selector:
    matchLabels:
      app: uuid-api-app
  template:
    metadata:
      namespace: doridoridoriand
      labels:
        app: uuid-api-app
    spec:
      containers:
        - name: uuid-api-container
          image: doridoridoriand/uuid-api:0.0.1
          resources:
            requests:
              cpu: '1'
              memory: 1Gi
            limits:
              cpu: '2'
              memory: 2Gi
          ports:
            - containerPort: 3000
          livenessProbe:
            exec:
              command:
                - cat
                - /README.md
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - cat
                - /.gitignore
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: uuid-api-service
  namespace: doridoridoriand
spec:
  type: LoadBalancer
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 23000
      targetPort: 3000
  selector:
      app: uuid-api-app

---
apiVersion: v1
kind: Service
metadata:
  name: uuid-api-alb-service
  namespace: doridoridoriand
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 3000
      targetPort: 3000
  selector:
      app: uuid-api-app

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uuid-api-ingress
  namespace: doridoridoriand
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=1
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=1
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: env=dev,app=uuid-api
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '2'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: uuid-api-alb-service
              servicePort: 3000
